--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Aan</h1>
   <div class="slide">
     <img src="image/8. image.png" alt="demo image" />
   </div>
+  <div class="slide">
+    <img src="image/9. image.png" alt="demo image" />
+  </div>
   <a class="prev" onclick="prevSlide()">Prev</a>
   <a class="next" onclick="nextSlide()">Next</a>
 </div>
@@ -104,10 +107,13 @@ Aan</h1>
   </div>
   <div class="row">
     <div class="column">
-      <img src="image/7. image.png" alt="Snow" style="width:70%">
+      <img src="image/7. image.png" alt="Snow" style="width:100%">
     </div>
     <div class="column">
-      <img src="image/8. image.png" alt="Snow" style="width:70%">
+      <img src="image/8. image.png" alt="Snow" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="image/9. image.png" alt="Snow" style="width:100%">
     </div>
     </div>
 
